Add the system test execution script to the system test artifact.
Refs #81735

--- a/systests/build.gradle
+++ b/systests/build.gradle
@@ -52,6 +52,12 @@ distributions
 				include 'smalldata_test'
             }
 
+            // Add the system test execution script
+            from('scripts')
+            {
+                include 'JUnit_systests_zip.bash'
+            }
+
             // Gradle software itself
             from('..')
             {
