--- a/wres-tasker/Dockerfile
+++ b/wres-tasker/Dockerfile
@@ -5,7 +5,7 @@ RUN dnf install -y \
     unzip-6.0-43.el8 \
     which-2.21-12.el8 \
     # The following aren't direct dependencies of WRES, are updates post-8.2.2004
-    bind-export-libs-9.11.13-5.el8_2 \
+    bind-export-libs-9.11.13-6.el8_2.1 \
     dbus-1.12.8-10.el8_2 \
     dbus-common-1.12.8-10.el8_2 \
     dbus-daemon-1.12.8-10.el8_2 \
@@ -17,6 +17,7 @@ RUN dnf install -y \
     iptables-libs-1.8.4-10.el8_2.1 \
     libdnf-0.39.1-6.el8_2 \
     libnghttp2-1.33.0-3.el8_2.1 \
+    librepo-1.11.0-3.el8_2 \
     python3-dnf-4.2.17-7.el8_2 \
     python3-hawkey-0.39.1-6.el8_2 \
     python3-libdnf-0.39.1-6.el8_2 \
