Limit java.nio direct memory allocation to 512MiB
This way the JVM will throw OutOfMemoryError when the limit is reached
rather than the host OS oomkiller killing the process.

Refs #83515
Refs #83536

--- a/build.gradle
+++ b/build.gradle
@@ -1345,6 +1345,7 @@ sourceCompatibility = '11'
 targetCompatibility = '11'
 
 applicationDefaultJvmArgs = ['-Xms1680m', '-Xmx1680m',
+                             '-XX:MaxDirectMemorySize=512m',
                              '-XX:+HeapDumpOnOutOfMemoryError',
                              '-Duser.timezone=UTC',
                              '-Djava.util.logging.config.class=wres.system.logging.JavaUtilLoggingRedirector',
