--- a/build.gradle
+++ b/build.gradle
@@ -224,9 +224,9 @@ project(':wres-util')
         }
 
         // Update the org.apache.httpcomponents modules depended upon by cdm
-        compile 'org.apache.httpcomponents:httpclient:4.5.12'
+        compile 'org.apache.httpcomponents:httpclient:4.5.13'
         compile 'org.apache.httpcomponents:httpcore:4.4.13'
-        compile 'org.apache.httpcomponents:httpmime:4.5.12'
+        compile 'org.apache.httpcomponents:httpmime:4.5.13'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
@@ -316,12 +316,12 @@ project(':wres-io')
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
         // JSON deserialization uses jackson directly. Specify recent version.
-        compile 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
-        compile 'com.fasterxml.jackson.core:jackson-annotations:2.11.2'
-        compile 'com.fasterxml.jackson.core:jackson-core:2.11.2'
+        compile 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
+        compile 'com.fasterxml.jackson.core:jackson-annotations:2.11.3'
+        compile 'com.fasterxml.jackson.core:jackson-core:2.11.3'
 
         // For Java 8 java.time support
-        compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.2'
+        compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.3'
 
         compile('edu.ucar:cdm-core:5.3.3')
         {
@@ -344,7 +344,7 @@ project(':wres-io')
         compile 'commons-codec:commons-codec:1.15'
 
         // Better-than-Java-11's HTTP client
-        compile 'com.squareup.okhttp3:okhttp:4.9.0'
+        compile 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
 
         // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
         runtime 'org.slf4j:jul-to-slf4j:1.8.0-beta4'
@@ -1095,16 +1095,16 @@ project(':wres-tasker')
         compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
 
         // Server library to run a web server:
-        compile 'org.eclipse.jetty:jetty-server:9.4.31.v20200723'
+        compile 'org.eclipse.jetty:jetty-server:9.4.32.v20200930'
 
         // Servlet container library to run a web application with:
-        compile 'org.eclipse.jetty:jetty-webapp:9.4.31.v20200723'
+        compile 'org.eclipse.jetty:jetty-webapp:9.4.32.v20200930'
 
         // Needed at compile-time to reference ServletContainer.class and
         // DefaultServlet.class
         compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.32'
         // Update the jetty-continuation depended upon by above jersey dep
-        compile 'org.eclipse.jetty:jetty-continuation:9.4.31.v20200723'
+        compile 'org.eclipse.jetty:jetty-continuation:9.4.32.v20200930'
 
         // To temporarily cache/store-in-RAM job metadata when redis unavailable
         compile 'com.github.ben-manes.caffeine:caffeine:2.8.5'        
@@ -1385,11 +1385,11 @@ dependencies
 
     compile 'javax.ws.rs:javax.ws.rs-api:2.1.1'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
-    compile 'org.eclipse.jetty:jetty-server:9.4.31.v20200723'
-    compile 'org.eclipse.jetty:jetty-webapp:9.4.31.v20200723'
+    compile 'org.eclipse.jetty:jetty-server:9.4.32.v20200930'
+    compile 'org.eclipse.jetty:jetty-webapp:9.4.32.v20200930'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.32'
     // Update the jetty-continuation that above jersey dep depends on
-    compile 'org.eclipse.jetty:jetty-continuation:9.4.31.v20200723'
+    compile 'org.eclipse.jetty:jetty-continuation:9.4.32.v20200930'
 
     compile 'com.github.ben-manes.caffeine:caffeine:2.8.5'
 
