Tie the graphics and eventsbroker to the worker to allow for T-fold replication/scaling of a (worker:eventsbroker:graphics) via docker compose.
Refs #81735

--- a/docker-compose-all-roles-with-graphics.yml
+++ b/docker-compose-all-roles-with-graphics.yml
@@ -67,6 +67,8 @@ services:
         restart: always
         depends_on:
          - "broker"
+         - "eventsbroker"
+         - "graphics"
         volumes:
          # For input and output data:
          - /mnt/wres_share:/mnt/wres_share
