--- a/build.gradle
+++ b/build.gradle
@@ -1142,7 +1142,8 @@ project(':wres-tasker')
 
     mainClassName = 'wres.tasker.Tasker'
     applicationDefaultJvmArgs = ['-Xms340m','-Xmx340m',
-                                 '-XX:+HeapDumpOnOutOfMemoryError']
+                                 '-XX:+HeapDumpOnOutOfMemoryError',
+                                 '-Djdk.tls.ephemeralDHKeySize=3072']
 
     // Add static html files to the classpath when running via script
     startScripts
