Disable Client-Initiated Renegotiation in tasker server
This is a speculative commit. I was not able to reproduce the flag
locally due to unrelated issues so unable to test the change.

Refs #85391

--- a/build.gradle
+++ b/build.gradle
@@ -1143,7 +1143,8 @@ project(':wres-tasker')
     mainClassName = 'wres.tasker.Tasker'
     applicationDefaultJvmArgs = ['-Xms340m','-Xmx340m',
                                  '-XX:+HeapDumpOnOutOfMemoryError',
-                                 '-Djdk.tls.ephemeralDHKeySize=3072']
+                                 '-Djdk.tls.ephemeralDHKeySize=3072',
+                                 '-Djdk.tls.rejectClientInitiatedRenegotiation=true']
 
     // Add static html files to the classpath when running via script
     startScripts
