--- a/build.gradle
+++ b/build.gradle
@@ -1221,7 +1221,9 @@ project(':wres-events')
         // https://issues.sonatype.org/browse/MVNCENTRAL-348
         compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 
-        testCompile 'junit:junit:4.13.1'
+        // Junit 5 api and runtime
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 
         // Mocking help
         testCompile 'org.mockito:mockito-core:3.6.28'
