--- a/build.gradle
+++ b/build.gradle
@@ -1221,7 +1221,7 @@ project(':wres-events')
         // https://issues.sonatype.org/browse/MVNCENTRAL-348
         compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 
-        // Junit 5 api and runtime
+        // JUnit 5 API and runtime
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 
@@ -1229,6 +1229,11 @@ project(':wres-events')
         testCompile 'org.mockito:mockito-core:3.6.28'
         // Mocking final classes
         testImplementation 'org.mockito:mockito-inline:3.6.28'
+    }
+
+    // Facilitate unit tests with JUnit
+    test {
+        useJUnitPlatform()
     }
 }
 
