Convert outermost wres module unit tests to JUnit 5
For real this time. Removed the (unused) culprit dependencies that
brought JUnit 4 onto test-time classpaths.

Refs #86147 (discovered the exception propagation delay)
Refs #66545 (discussion regarding delay of exception propagation)
Refs #60310 (JUnit 5)

--- a/build.gradle
+++ b/build.gradle
@@ -1427,14 +1427,15 @@ dependencies
     runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
 
-    testCompile group: 'commons-io', name: 'commons-io', version: '2.8.0'
-    testCompile group: 'com.google.guava', name: 'guava-testlib', version: '30.0-jre'
-    testCompile group: 'com.google.guava', name: 'guava', version: '30.0-jre'
-
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testCompile 'org.mockito:mockito-core:3.6.28'
 
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+}
+
+test
+{
+    useJUnitPlatform()
 }
 
 sourceSets
