Writes a heap dump (hprof) file when the eventsbroker experiences a heap-related oome.
Refs #87000

Renames a builder and reduces the visibility of some wres-vis classes.

Refs #81735

--- a/docker-compose-all-roles-with-graphics.yml
+++ b/docker-compose-all-roles-with-graphics.yml
@@ -102,10 +102,12 @@ services:
         volumes:
          # Writable container home (for application logs) 
          - /container_home
+         # For hprof files.
+         - /mnt/wres_share:/mnt/wres_share
         environment:
          # The broker uses heap memory to run and direct memory for messages
          - QPID_JAVA_MEM=-Xmx256m -XX:MaxDirectMemorySize=512m
-         - JAVA_OPTS=-XX:HeapDumpPath=/mnt/wres_share/
+         - QPID_JAVA_GC=-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/mnt/wres_share/qpid.hprof
         # Broker heap plus direct memory is 768m in QPID_JAVA_MEM
         mem_limit: 1024m
         cap_drop:
