Changes the wres-statistics virtual host on the eventsbroker from an in-memory node to a node backed by a Apache Derby database instance. This allows for messages to flow-to-disk when direct memory approaches the maximum allowed, thereby avoiding an OOME related to direct memory.
Refs #87104
Refs #87000
Refs #84997

Adds connection retries to the core client and increases the delay between retries on the graphics client.

Refs #87105
Refs #87000

--- a/wres-eventsbroker/Dockerfile
+++ b/wres-eventsbroker/Dockerfile
@@ -47,7 +47,7 @@ COPY nonsrc/initial-config.json ${QPID_HOME}/etc/
 
 USER wres_eventsbroker
 EXPOSE 5673 15673
-VOLUME ${QPID_WORK}
+VOLUME /container_home
 
 VOLUME /wres_secrets
 
