--- a/docker-compose-all-roles-with-graphics.yml
+++ b/docker-compose-all-roles-with-graphics.yml
@@ -97,17 +97,17 @@ services:
     eventsbroker:
         expose:
          - 5673
-        image: "${DOCKER_REGISTRY}/wres/wres-eventsbroker:20201009-d35b7fc"
+        image: "${DOCKER_REGISTRY}/wres/wres-eventsbroker:20201211-8d6117d"
         restart: always
         volumes:
-         # Writable container home (for application logs) 
+         # Writable container home (for application logs and persisted messages) 
          - /container_home
          # For hprof files.
          - /mnt/wres_share:/mnt/wres_share
         environment:
          # The broker uses heap memory to run and direct memory for messages
          - QPID_JAVA_MEM=-Xmx256m -XX:MaxDirectMemorySize=512m
-         - QPID_JAVA_GC=-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/mnt/wres_share/qpid.hprof
+         - QPID_JAVA_GC=-XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/mnt/wres_share/qpid.hprof
         # Broker heap plus direct memory is 768m in QPID_JAVA_MEM
         mem_limit: 1024m
         cap_drop:
@@ -118,7 +118,7 @@ services:
     graphics:
         depends_on:
         - eventsbroker
-        image: "${DOCKER_REGISTRY}/wres/wres-graphics:20201105-1eb903b"
+        image: "${DOCKER_REGISTRY}/wres/wres-graphics:20201215-c351700"
         restart: always
         # For graphics outputs
         volumes:
