--- a/build.gradle
+++ b/build.gradle
@@ -883,23 +883,27 @@ project(':wres-tasker')
         compile project( ':wres-messages' )
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
         compile 'com.rabbitmq:amqp-client:5.10.0'
-        compile 'javax.ws.rs:javax.ws.rs-api:2.1.1'
-        compile 'javax.annotation:javax.annotation-api:1.3.2'
+        compile 'jakarta.ws.rs:jakarta.ws.rs-api:3.0.0'
+        compile 'jakarta.annotation:jakarta.annotation-api:2.0.0'
 
         // For Java 9+ compatibility:
-        compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
+        compile 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.0'
 
         // Server library to run a web server:
-        compile 'org.eclipse.jetty:jetty-server:9.4.35.v20201120'
+        compile 'org.eclipse.jetty:jetty-server:11.0.0'
+
+        // Support HTTP/2
+        compile 'org.eclipse.jetty.http2:http2-server:11.0.0'
+
+        // Support ALPN
+        compile 'org.eclipse.jetty:jetty-alpn-java-server:11.0.0'
 
         // Servlet container library to run a web application with:
-        compile 'org.eclipse.jetty:jetty-webapp:9.4.35.v20201120'
+        compile 'org.eclipse.jetty:jetty-webapp:11.0.0'
 
         // Needed at compile-time to reference ServletContainer.class and
         // DefaultServlet.class
-        compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.33'
-        // Update the jetty-continuation depended upon by above jersey dep
-        compile 'org.eclipse.jetty:jetty-continuation:9.4.35.v20201120'
+        compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:3.0.0'
 
         // To temporarily cache/store-in-RAM job metadata when redis unavailable
         compile 'com.github.ben-manes.caffeine:caffeine:2.8.8'
@@ -914,11 +918,11 @@ project(':wres-tasker')
         compile 'org.apache.commons:commons-lang3:3.11'        
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
-        runtime 'org.glassfish.jersey.core:jersey-server:2.33'
+        runtime 'org.glassfish.jersey.core:jersey-server:3.0.0'
 
         // Needed to prevent "java.lang.IllegalStateException: InjectionManagerFactory not found."
         // Thanks, https://luohuahuang.org/2017/11/13/jersey-illegalstateexception-injectionmanagerfactory/
-        runtime 'org.glassfish.jersey.inject:jersey-hk2:2.33'
+        runtime 'org.glassfish.jersey.inject:jersey-hk2:3.0.0'
 
         testCompile 'junit:junit:4.13.1'
 
