--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript
     dependencies
     {
         // For markdown -> html
-        classpath 'com.atlassian.commonmark:commonmark:0.16.1'
+        classpath 'com.atlassian.commonmark:commonmark:0.17.0'
         // To create a unified javadoc across submodules and top-level module:
         classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:3.0.1'
     }
@@ -27,7 +27,7 @@ buildscript
 plugins
 {
     // Static analysis tool sonarqube client
-    id 'org.sonarqube' version '3.1'
+    id 'org.sonarqube' version '3.1.1'
 
     //id 'com.github.jacobono.jaxb' version '1.3.5'
     // Above is unmaintained, less gradle-y, below fork has several improvements
@@ -52,7 +52,7 @@ plugins
     id 'com.github.ksoichiro.console.reporter' version '0.6.2'
 
     // To discover library versions with known vulnerabilities
-    id 'org.owasp.dependencycheck' version '6.0.5'
+    id 'org.owasp.dependencycheck' version '6.1.0'
     
     // Task to assist in downloading artifacts
     id "de.undercouch.download" version "4.1.1"
@@ -212,7 +212,7 @@ project(':wres-util')
     {
         compile project(':wres-datamodel')
 
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
 
         compile 'com.google.guava:guava:30.1-jre'
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
@@ -228,15 +228,15 @@ project(':wres-util')
         compile 'org.apache.httpcomponents:httpcore:4.4.14'
         compile 'org.apache.httpcomponents:httpmime:4.5.13'
 
-        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         // Because cdm uses apache commons logging, bridge to slf4j
-        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta4'
+        runtime 'org.slf4j:jcl-over-slf4j:2.0.0-alpha1'
 
         testCompile 'junit:junit:4.13.1'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:3.7.0'
+        testCompile 'org.mockito:mockito-core:3.7.7'
 
         // super-duper mocking help (mocking static, private methods)
         testCompile 'org.powermock:powermock-api-mockito2:2.0.9'
@@ -249,20 +249,20 @@ project(':wres-system')
     dependencies
     {
         compile project(':wres-util')
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
 
         compile 'com.google.guava:guava:30.1-jre'
 
         // to use native postgres copy, need this on compile, otherwise runtime
         compile 'org.postgresql:postgresql:42.2.18'
-        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.10.3'
+        compile group: 'org.liquibase', name: 'liquibase-core', version: '4.2.2'
 
         // connection pooling:
-        compile 'com.zaxxer:HikariCP:3.4.5'
+        compile 'com.zaxxer:HikariCP:4.0.1'
 
         // Because org.postgresql:postgresql uses JUL logging, bridge it, here
         // at compile time because we need to expose a class to JUL.
-        compile 'org.slf4j:jul-to-slf4j:1.8.0-beta4'
+        compile 'org.slf4j:jul-to-slf4j:2.0.0-alpha1'
 
         //JB @ 02/16/17
         testCompile group: 'com.google.guava', name: 'guava-testlib', version: '30.1-jre'
@@ -286,7 +286,7 @@ project(':wres-datamodel')
     {
         compile project(':wres-statistics')
         
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
         compile 'org.apache.commons:commons-lang3:3.11'
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
         compile project(':wres-config')
@@ -295,7 +295,7 @@ project(':wres-datamodel')
         compile 'com.github.ben-manes.caffeine:caffeine:2.8.8'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:3.7.0'
+        testCompile 'org.mockito:mockito-core:3.7.7'
 
         // JUnit 5 API and runtime
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
@@ -322,7 +322,7 @@ project(':wres-io')
         compile project(':wres-grid')
         compile project(':wres-events')
 
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
         // JSON deserialization uses jackson directly. Specify recent version.
@@ -345,7 +345,7 @@ project(':wres-io')
         compile 'org.postgresql:postgresql:42.2.18'
 
         // connection pooling:
-        compile 'com.zaxxer:HikariCP:3.4.5'
+        compile 'com.zaxxer:HikariCP:4.0.1'
 
         // wres.io.utilities uses javax.json.* imports
         compile 'org.glassfish:javax.json:1.1.4'
@@ -357,18 +357,18 @@ project(':wres-io')
         compile 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
 
         // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
-        runtime 'org.slf4j:jul-to-slf4j:1.8.0-beta4'
+        runtime 'org.slf4j:jul-to-slf4j:2.0.0-alpha1'
 
         // Because cdm and aws sdk uses apache commons logging, bridge to slf4j
-        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta4'
+        runtime 'org.slf4j:jcl-over-slf4j:2.0.0-alpha1'
 
         //JB @ 02/16/17
         testCompile group: 'com.google.guava', name: 'guava-testlib', version: '30.1-jre'
 
-        testCompile group: 'org.liquibase', name: 'liquibase-core', version: '3.10.3'
+        testCompile group: 'org.liquibase', name: 'liquibase-core', version: '4.2.2'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:3.7.0'
+        testCompile 'org.mockito:mockito-core:3.7.7'
 
         // TODO: remove dependence on powermock, remove powermock completely.
         testCompile 'org.powermock:powermock-api-mockito2:2.0.9'
@@ -434,11 +434,11 @@ project(':wres-metrics')
         compile project(':wres-datamodel')
         compile project(':wres-config')
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
 
         testCompile project (':wres-datamodel')
         testCompile 'junit:junit:4.13.1'
-        testCompile 'org.mockito:mockito-core:3.7.0'
+        testCompile 'org.mockito:mockito-core:3.7.7'
     }
 }
 
@@ -559,7 +559,7 @@ project(':wres-statistics')
 
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
         compile 'com.google.protobuf:protobuf-java:3.14.0'
         compile project(':wres-config')
 
@@ -567,7 +567,7 @@ project(':wres-statistics')
         // https://issues.sonatype.org/browse/MVNCENTRAL-348
         testCompile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 
-        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         testCompile 'junit:junit:4.13.1'
         testCompile project( ':wres-eventsbroker' )
@@ -628,13 +628,13 @@ project(':wres-vis')
         compile project(':wres-events')
 
         compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
-        compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version: '1.2.18'
+        compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version: '2.0.0'
         compile 'com.google.guava:guava:30.1-jre'
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
-        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         // For ohdcommonchps.jar:
-        runtime group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.8.0-beta4'
+        runtime group: 'org.slf4j', name: 'log4j-over-slf4j', version: '2.0.0-alpha1'
 
         compile files('../libs/external/jcommon-1.0.12.jar')
         compile files('../libs/external/jfreechart-1.0.9.jar')
@@ -643,15 +643,10 @@ project(':wres-vis')
         // SVG graphics from JFreeChart instances
         compile group: 'org.jfree', name: 'jfreesvg', version: '3.4'
         
-        testCompile project (':wres-datamodel')
-        testRuntime group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.8.0-beta4'
-        
-        testCompile files('../libs/external/jfreechart-1.0.9.jar')
-        testCompile files('../libs/external/ohdcommonchps.jar')
         testCompile 'junit:junit:4.13.1'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:3.7.0'
+        testCompile 'org.mockito:mockito-core:3.7.7'
 
         testRuntime files('dist/lib/conf')
     }
@@ -663,7 +658,7 @@ project(':wres-config')
 
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
 
         // For Java 9+ compatibility:
         compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
@@ -763,17 +758,17 @@ project(':wres-grid')
         compile project(':wres-config')
         compile project(':wres-util')
         compile project(':wres-system')
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
         compile('edu.ucar:cdm-core:5.4.1')
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
         }
 
-        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         // Because cdm uses apache commons logging, bridge to slf4j
-        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta4'
+        runtime 'org.slf4j:jcl-over-slf4j:2.0.0-alpha1'
 
         testCompile 'junit:junit:4.13.1'
     }
@@ -826,7 +821,7 @@ project(':wres-messages')
 
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
         compile 'com.google.protobuf:protobuf-java:3.14.0'
 
         testCompile 'junit:junit:4.13.1'
@@ -839,9 +834,9 @@ project(':wres-worker')
     dependencies
     {
         compile project( ':wres-messages' )
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
         compile 'com.rabbitmq:amqp-client:5.10.0'
-        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         testCompile 'junit:junit:4.13.1'
     }
@@ -881,7 +876,7 @@ project(':wres-tasker')
     dependencies
     {
         compile project( ':wres-messages' )
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
         compile 'com.rabbitmq:amqp-client:5.10.0'
         compile 'jakarta.ws.rs:jakarta.ws.rs-api:3.0.0'
         compile 'jakarta.annotation:jakarta.annotation-api:2.0.0'
@@ -903,7 +898,7 @@ project(':wres-tasker')
 
         // Needed at compile-time to reference ServletContainer.class and
         // DefaultServlet.class
-        compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:3.0.0'
+        compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:3.0.1'
 
         // To temporarily cache/store-in-RAM job metadata when redis unavailable
         compile 'com.github.ben-manes.caffeine:caffeine:2.8.8'
@@ -912,17 +907,17 @@ project(':wres-tasker')
         compile 'org.apache.tika:tika-core:1.25'
 
         // To persist job metadata while keeping it relatively fast
-        compile 'org.redisson:redisson:3.14.1'
+        compile 'org.redisson:redisson:3.15.0'
 
         // For ToStringBuilder
         compile 'org.apache.commons:commons-lang3:3.11'        
 
-        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
-        runtime 'org.glassfish.jersey.core:jersey-server:3.0.0'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
+        runtime 'org.glassfish.jersey.core:jersey-server:3.0.1'
 
         // Needed to prevent "java.lang.IllegalStateException: InjectionManagerFactory not found."
         // Thanks, https://luohuahuang.org/2017/11/13/jersey-illegalstateexception-injectionmanagerfactory/
-        runtime 'org.glassfish.jersey.inject:jersey-hk2:3.0.0'
+        runtime 'org.glassfish.jersey.inject:jersey-hk2:3.0.1'
 
         testCompile 'junit:junit:4.13.1'
 
@@ -974,8 +969,8 @@ project(':wres-eventsbroker')
 {
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
-        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         compile 'org.apache.commons:commons-lang3:3.11'
 
@@ -1009,12 +1004,12 @@ project(':wres-events')
     {
         compile project( ':wres-eventsbroker' )
         compile project( ':wres-statistics' )
-        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
 
         // JCIP annotations
         compile group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
 
-        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         // JMS API ( QPID client implements 1.1, but 1.1 is not available on maven )
         // https://issues.sonatype.org/browse/MVNCENTRAL-348
@@ -1025,9 +1020,9 @@ project(':wres-events')
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:3.7.0'
+        testCompile 'org.mockito:mockito-core:3.7.7'
         // Mocking final classes
-        testImplementation 'org.mockito:mockito-inline:3.7.0'
+        testImplementation 'org.mockito:mockito-inline:3.7.7'
     }
 
     // Facilitate unit tests with JUnit
@@ -1189,15 +1184,15 @@ dependencies
     compile project(':wres-events')
     compile project(':wres-eventsbroker')
 
-    compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+    compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
 
     compile 'javax.ws.rs:javax.ws.rs-api:2.1.1'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
-    compile 'org.eclipse.jetty:jetty-server:9.4.35.v20201120'
-    compile 'org.eclipse.jetty:jetty-webapp:9.4.35.v20201120'
+    compile 'org.eclipse.jetty:jetty-server:9.4.36.v20210114'
+    compile 'org.eclipse.jetty:jetty-webapp:9.4.36.v20210114'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.33'
     // Update the jetty-continuation that above jersey dep depends on
-    compile 'org.eclipse.jetty:jetty-continuation:9.4.35.v20201120'
+    compile 'org.eclipse.jetty:jetty-continuation:9.4.36.v20210114'
 
     compile 'com.github.ben-manes.caffeine:caffeine:2.8.8'
 
@@ -1205,11 +1200,11 @@ dependencies
     runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.33'
     runtime 'org.glassfish.jersey.inject:jersey-hk2:2.33'
 
-    runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+    runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
 
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testCompile 'org.mockito:mockito-core:3.7.0'
+    testCompile 'org.mockito:mockito-core:3.7.7'
 
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
