Add a WebClient-can-reach-WRDS test, enable same test for NWIS
Include WRDS-used DoD CA pem in the external services test zip, and on
the classpath at test-time within that distribution.

Refs #87148

--- a/build.gradle
+++ b/build.gradle
@@ -1083,6 +1083,12 @@ project( ':wres-external-services-tests' )
                 {
                     into( 'lib' )
                 }
+
+                // Add the DoD intermediate certificate to trust
+                from( '../dist/lib/conf/dod_sw_ca-54_expires_2022-11.pem' )
+                {
+                    into( 'lib/conf' )
+                }
             }
         }
     }
