--- a/docker-compose-workers-only-with-graphics.yml
+++ b/docker-compose-workers-only-with-graphics.yml
@@ -52,7 +52,7 @@ services:
          # The broker uses heap memory to run and direct memory for messages
          - QPID_WORK=/container_home/${HOST_NAME}
          - QPID_JAVA_MEM=-Xmx256m -XX:MaxDirectMemorySize=2048m
-         - QPID_JAVA_GC=-XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/container_home/${HOST_NAME}/qpid.hprof
+         - QPID_JAVA_GC=-XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/container_home/${HOST_NAME}
         # Broker heap plus direct memory is 2304m in QPID_JAVA_MEM
         mem_limit: 2560m
         cap_drop:
