--- a/build.gradle
+++ b/build.gradle
@@ -255,7 +255,7 @@ project(':wres-system')
 
         // to use native postgres copy, need this on compile, otherwise runtime
         compile 'org.postgresql:postgresql:42.2.18'
-        compile group: 'org.liquibase', name: 'liquibase-core', version: '4.2.2'
+        compile group: 'org.liquibase', name: 'liquibase-core', version: '4.3.0'
 
         // connection pooling:
         compile 'com.zaxxer:HikariCP:4.0.1'
@@ -298,12 +298,12 @@ project(':wres-datamodel')
         testCompile 'org.mockito:mockito-core:3.7.7'
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
 
         // Backwards compatibility for JUnit 4 tests
         testCompileOnly 'junit:junit:4.13.1' 
-        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.0'
+        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.1'
     }
     // Facilitate unit tests with JUnit
     test {
@@ -356,6 +356,9 @@ project(':wres-io')
         // Better-than-Java-11's HTTP client
         compile 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
 
+        // Update vulnerable kotlin-stdlib that okhttp/okio uses
+        compile 'org.jetbrains.kotlin:kotlin-stdlib:1.4.30'
+
         // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
         runtime 'org.slf4j:jul-to-slf4j:2.0.0-alpha1'
 
@@ -365,7 +368,7 @@ project(':wres-io')
         //JB @ 02/16/17
         testCompile group: 'com.google.guava', name: 'guava-testlib', version: '30.1-jre'
 
-        testCompile group: 'org.liquibase', name: 'liquibase-core', version: '4.2.2'
+        testCompile group: 'org.liquibase', name: 'liquibase-core', version: '4.3.0'
 
         // Mocking help
         testCompile 'org.mockito:mockito-core:3.7.7'
@@ -381,12 +384,12 @@ project(':wres-io')
         testCompile 'com.h2database:h2:1.4.200'
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
 
         // Backwards compatibility for JUnit 4 tests
         testCompileOnly 'junit:junit:4.13.1' 
-        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.0'
+        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.1'
     }
 
     test
@@ -1016,8 +1019,8 @@ project(':wres-events')
         compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
 
         // Mocking help
         testCompile 'org.mockito:mockito-core:3.7.7'
@@ -1266,10 +1269,10 @@ dependencies
     runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
 
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.1'
     testCompile 'org.mockito:mockito-core:3.7.7'
 
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
 }
 
 test
